# Jackmeter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: IProcessor.hpp  JackClient.hpp  SimpleFrequencyProcessor.hpp  SimplePeakProcessor.hpp
scripts/: build.sh  start_audio.sh  stop_audio.sh
src/: JackClient.cpp  SimpleFrequencyProcessor.cpp  SimplePeakProcessor.cpp  jackmeter.cpp
tests/: test_simplePeakProcessor.cpp
